--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
     
-    <link href="css/global.css" rel="stylesheet">
-    <link href="css/background.css" rel="stylesheet">
+    <link href="css/global.css" rel="stylesheet">    
     <link href="css/container.css" rel="stylesheet">
+    <link href="css/header.css" rel="stylesheet">  
     <link href="css/calculator.css" rel="stylesheet">
     <link href="css/footer.css" rel="stylesheet">
 
