--- a/index.html
+++ b/index.html
@@ -36,11 +36,20 @@
                     <fieldset class="calculator__formFieldset">
                         <legend class="calculator__formLegend">Kalkulator walut</legend>
                             <p class="calculator__formParagraph">
-                                <label class="calculator__formLabel">Chcę wymienić
-                                    <input class="calculator__formField js-amount" type="number" min="10" max="100000" step="1" placeholder="1000">
-                                    PLN na
-                                    <select class="calculator__formField js-currencyTo" name="currencyTo">                                        
-                                        <option class="js-toEUR" value="EUR">EUR</option>
+                                <label class="calculator__formLabel">Chcę wymienić                                    
+                                    <input class="calculator__formField js-amount" type="number" min="10" max="100000" step="1" placeholder="1000" required>
+                                    <select class="calculator__formField calculator__formField--currencyFrom js-currencyFrom" name="currencyFrom">
+                                        <option class="js-fromPLN" value="PLN" selected>PLN</option>
+                                        <option class="js-fromEUR" value="EUR">EUR</option>
+                                        <option class="js-fromUSD" value="USD">USD</option>
+                                        <option class="js-fromGBP" value="GPB">GBP</option>
+                                        <option class="js-fromCHF" value="CHF">CHF</option>
+                                        <option class="js-fromRUB" value="RUB">RUB</option>
+                                    </select>
+                                    na
+                                    <select class="calculator__formField js-currencyTo" name="currencyTo">
+                                        <option class="js-toPLN" value="PLN">PLN</option>
+                                        <option class="js-toEUR" value="EUR" selected>EUR</option>
                                         <option class="js-toUSD" value="USD">USD</option>
                                         <option class="js-toGBP" value="GPB">GBP</option>
                                         <option class="js-toCHF" value="CHF">CHF</option>
