added the same currencies scenario and debugged

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                         <option class="js-fromPLN" value="PLN" selected>PLN</option>
                                         <option class="js-fromEUR" value="EUR">EUR</option>
                                         <option class="js-fromUSD" value="USD">USD</option>
-                                        <option class="js-fromGBP" value="GPB">GBP</option>
+                                        <option class="js-fromGBP" value="GBP">GBP</option>
                                         <option class="js-fromCHF" value="CHF">CHF</option>
                                         <option class="js-fromRUB" value="RUB">RUB</option>
                                     </select>
@@ -51,7 +51,7 @@
                                         <option class="js-toPLN" value="PLN">PLN</option>
                                         <option class="js-toEUR" value="EUR" selected>EUR</option>
                                         <option class="js-toUSD" value="USD">USD</option>
-                                        <option class="js-toGBP" value="GPB">GBP</option>
+                                        <option class="js-toGBP" value="GBP">GBP</option>
                                         <option class="js-toCHF" value="CHF">CHF</option>
                                         <option class="js-toRUB" value="RUB">RUB</option>
                                     </select> 
