simplified styles and therefore class structured

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 <body>
     <div class="background">        
         <div class="container">
-            <section class="header section">
+            <section class="header">
                 <h1 class="header__title">Twój kantor</h1>
                 <p class="header__paragraph">najlepsze kursy walut w internecie</p>
             </section>
             
-            <section class="calculator section">
+            <section class="calculator">
                 <form class="calculator__form js-calculator">
                     <fieldset class="calculator__formFieldset">
                         <legend class="calculator__formLegend">Kalkulator walut</legend>
