added function of reseting the form result

--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                         </p>
                         <p class="calculator__formParagraph">
                             <button class="button button--submit" type="submit">Oblicz</button>
-                            <button class="button button--reset" type="reset">Wyczyść</button>
+                            <button class="button button--reset js-resetButton" type="reset">Wyczyść</button>
                         </p>
                     </fieldset>
                 </form>
 
                 <div class="calculator__resultField">
-                    <span class="js-result">By zobaczyć ofertę, wypełnij powyższy formularz</span>
+                    <span class="js-result"></span>
                 </div>
 
             </section>
