value attr of amount input changed to placeholder

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <p class="calculator__formParagraph">
                             <label class="calculator__formLabel">Chcę wymienić
                                 <input class="calculator__formField js-amount" type="number" min="10" max="100000"
-                                    step="1" value="1000" required>
+                                    step="1" placeholder="1000" required>
                                 <select class="calculator__formField js-currencyFrom" name="currencyFrom">
                                     <option class="js-fromPLN" value="PLN" selected>PLN</option>
                                     <option class="js-fromEUR" value="EUR">EUR</option>
