corrected html structure according to html checker

--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
                             <label class="calculator__formLabel">Chcę wymienić
                                 <input class="calculator__formField js-amount" type="number" min="10" max="100000"
                                     step="1" placeholder="1000" required>
+                            </label>
+                            <label class="calculator__formLabel">
                                 <select class="calculator__formField js-currencyFrom" name="currencyFrom">
                                     <option class="js-fromPLN" value="PLN" selected>PLN</option>
                                     <option class="js-fromEUR" value="EUR">EUR</option>
